--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "torch>=2.1.0",
     "transformers>=4.49.0",
     "uvicorn>=0.34.0",
+    "llama-cpp-python>=0.2.56",
 ]
 
 [project.optional-dependencies]
