--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ minversion = "6.0"
 addopts = "-ra -q"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-pythonpath = ["src"]
+pythonpath = [".", "src"]
 markers = [
     "unit: marks tests as unit tests",
     "integration: marks tests as integration tests",
@@ -122,14 +122,12 @@ warn_unused_ignores = false
 warn_no_return = true
 warn_unreachable = false
 exclude = ["scripts"]
-# Ignore all import errors
 ignore_missing_imports = true
-# Disable the error about duplicate modules
 namespace_packages = true
 explicit_package_bases = true
-# Completely disable error reporting for duplicate modules
 error_summary = false
 follow_imports = "skip"
+files = ["src", "tests"]  # Explicitly include both src and tests directories
 
 [[tool.mypy.overrides]]
 module = [
