so much fixing_2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -153,6 +153,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
+          slug: sm4rtm4art/llm-rag
           fail_ci_if_error: false
           verbose: true
 
