--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: llm-rag-service
+  name: llm-rag
   labels:
     app: llm-rag
 spec:
   selector:
     app: llm-rag
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 8000
+      protocol: TCP
       name: http
-  type: LoadBalancer  # Use ClusterIP if internal-only
+  type: ClusterIP
