--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,6 @@ data/documents/**/*.bmp
 
 # Ignore test_subset directory which might contain sensitive content
 data/documents/test_subset/
+
+# Quarantine backup
+quarantine_backup/
